--- a/dest/index.html
+++ b/dest/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><head><title>Nura elite</title><link rel="stylesheet" href="./css/main.css"></head>
+<!DOCTYPE html><head><title>Nura elite</title><link rel="icon" type="image/x-icon" href="./img/favicon.png"><link rel="stylesheet" href="./css/main.css"></head><body><header><nav><div class="logo"><a href="#"><img src="./img/logo.png"></a></div></nav><section class="banner"></section></header></body>
